--- a/src/App.css
+++ b/src/App.css
@@ -3,23 +3,23 @@
 }
 
 h2 {
-  color: #f06292; /* A vibrant pink */
+  color: #f06292; 
   font-size: 2.5em;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
   margin-bottom: 20px;
   text-align: center;
-  background-color: #f0f0f0; /* Light gray background */
+  background-color: #f0f0f0; 
   padding: 10px 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 button {
-  background-color: rgba(76, 175, 80, 0.8); /* Verde con 80% de opacidad */
+  background-color: rgba(76, 175, 80, 0.8);
   border: none;
   color: white;
-  padding: 15px 32px;
+  padding: 12px 25px;
   text-align: center;
   text-decoration: none;  
 
@@ -28,12 +28,12 @@ button {
   margin: 4px 2px;
   cursor: pointer;  
 
-  transition: background-color 0.3s ease; /* Smooth transition on hover */
+  transition: background-color 0.3s ease; 
   border-radius: 10px;
   box-shadow: 0  
-  4px 8px rgba(0, 0, 0, 0.2); /* Sombra suave */
+  4px 8px rgba(0, 0, 0, 0.2); 
 }
 
 button:hover {
-  background-color: #3e8e41; /* Darker green on hover */
+  background-color: #3e8e41; 
 }
