--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,12 @@
 }
 
 h2 {
-  color: #f06292; 
   font-size: 2.5em;
   font-weight: bold;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   margin-bottom: 20px;
   text-align: center;
-  background-color: #f0f0f0; 
+  background-color: #f0f0f0;
   padding: 10px 20px;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -21,19 +20,44 @@ button {
   color: white;
   padding: 12px 25px;
   text-align: center;
-  text-decoration: none;  
+  text-decoration: none;
 
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-  cursor: pointer;  
+  cursor: pointer;
 
-  transition: background-color 0.3s ease; 
+  transition: background-color 0.3s ease;
   border-radius: 10px;
-  box-shadow: 0  
-  4px 8px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
-  background-color: #3e8e41; 
+  background-color: #3e8e41;
+}
+
+.card {
+  max-width: 400px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+}
+
+.card h2 {
+  margin-bottom: 10px;
+}
+
+.card ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  text-align: left;
+}
+
+.card li {
+  margin-bottom: 10px;
+  padding-left: 90px;
+
 }
